--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
   <head>
+    <meta name="facebook-domain-verification" content="xtp2x1hfgkp419fvrt3uirsg887qao" />
     <meta name="facebook-domain-verification" content="ioj8e26gf836bqvwhpsr7grbr6i3g4" />
     <meta name="facebook-domain-verification" content="kzw2hevogikh7zmcr4awv4awggi8gk" />
     <meta charset="utf-8">
